--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,21 +1,43 @@
-$my-color: #ffedb8;
+/*!
+ * Bootstrap v4.1.3 (https://getbootstrap.com/)
+ * Copyright 2011-2018 The Bootstrap Authors
+ * Copyright 2011-2018 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
+ */
 
-body {
-	background-color: $my-color;
-	&>div{
-		display: flex;
-		flex-wrap: wrap;
-		height:20em;
-		width:20em;
-		background-color: peachpuff;
-		.part{
-			flex: 1 0 10%;
-			background-color: pink;
-			margin: 0.5em;
-		}
-	}
-	h1 {
-		color: orange;
-		border-bottom: 5px white solid;
-	}
-}
+@import "../node_modules/bootstrap/scss/functions";
+@import "scss/custom.scss";
+@import "../node_modules/bootstrap/scss/variables";
+@import "../node_modules/bootstrap/scss/mixins";
+@import "../node_modules/bootstrap/scss/root";
+@import "../node_modules/bootstrap/scss/reboot";
+// @import "type";
+// @import "images";
+// @import "code";
+// @import "grid";
+// @import "tables";
+// @import "forms";
+// @import "buttons";
+// @import "transitions";
+// @import "dropdown";
+// @import "button-group";
+// @import "input-group";
+// @import "custom-forms";
+// @import "nav";
+// @import "navbar";
+// @import "card";
+// @import "breadcrumb";
+// @import "pagination";
+// @import "badge";
+// @import "jumbotron";
+// @import "alert";
+// @import "progress";
+// @import "media";
+// @import "list-group";
+// @import "close";
+// @import "modal";
+// @import "tooltip";
+// @import "popover";
+// @import "carousel";
+// @import "utilities";
+// @import "print";
