--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -5,7 +5,12 @@ $font-main : 'Muli', sans-serif;
 
 // Colours
 $red : #FE5F55;
+$lightblue : #F7F7FF;
 
 $darken : rgba(0,0,0,0.2);
 
 $color1: $red;
+$color2: $lightblue;
+
+// Height
+$headerfooterheight : 10vh;
