cat - section 3, base Sass

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -2,7 +2,6 @@
 
 $font-main : 'Muli', sans-serif;
 
-
 // Colours
 $red : #FE5F55;
 $lightblue : #F7F7FF;
@@ -14,3 +13,6 @@ $color2: $lightblue;
 
 // Height
 $headerfooterheight : 10vh;
+
+// Buttons
+$button-size: 1.75em;
