--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -1,9 +1,31 @@
 // Base
-
 .header, .footer{
 	background-color: $color2;
 	height:$headerfooterheight;
+	display:flex;
+	flex-wrap:wrap;
+	align-items:center;
+	justify-content:space-between;
+}
 
+.logo{
+	flex:0 0 2.5em;
+	margin:0.5em;
+}
+.location-title{
+	h1{
+		margin:0 1em 0 0;
+	}
+}
+
+.back-btn { 
+	color: $color1;
+	box-sizing:border-box;
+	padding:1em;
+
+	i{
+		font-size:$button-size;
+	}
 }
 	
 .section{
