--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -81,19 +81,15 @@
 				
 			.choice-name {
 				margin-left:1em;
-				flex:1 0 60%;
 				color:$color2;
+				h1{
+					font-weight:300;
+				}
 			}
 
 			.drop-btn { 
-				box-sizing:border-box;
-				padding:1em;
-				width:1em;
-				flex:1 0 10%;
-				display:flex;
-				flex-wrap:wrap;
-				align-items:center;
-				justify-content:space-around;
+				margin-right:1.5em;
+				
 
 				i{
 					font-size:$button-size;
