some changes i scss

--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -12,11 +12,12 @@
 	flex:0 0 2.5em;
 	margin:0.5em;
 }
-.location-title{
+.location-title,.location-choice{
 	h1{
 		margin:0 1em 0 0;
 	}
 }
+
 
 .back-btn { 
 	color: $color1;
