started js, finished dropdown list for suburbs

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -12,7 +12,7 @@ $color1: $red;
 $color2: $lightblue;
 
 // Height
-$headerfooterheight : 10vh;
+$headerfooterheight : 3.75em;
 
 // Buttons
 $button-size: 1.75em;
