--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -41,7 +41,7 @@
 }
 
 
-// Section 1
+// Section 0
 
 .section-0{
 
@@ -66,6 +66,7 @@
 	background-image: url(../assets/images/fon.png);
 	background-repeat: no-repeat;
 	background-size: cover;
+	background-position: center;
 
 
 	.logo-full {
@@ -73,60 +74,70 @@
 		width: 100%;
 
 		img {
-			height: 50px;
+			height: 2em;
 		}
 	}
-	.select-wrap {
+	.selectplace-wrapper{
+		width: 80vw;
+		margin: 1em auto 0 auto;
 
-		max-width: 300px;
-		margin-left: 5em;
-
-
-		.select {
-
-			background-color: lighten($color1, 5%);
-			color: white;
-			font-size: 1.5em;
-			max-width: 7em;
+		.selectplace-header{
+			background-color: lighten($color1,5%);
+			width: 10em;
 			text-align: center;
-			margin-top: 3em;
-			border-radius: 0.15em;
-
-				p {
-					margin: 0;
-				}
+			padding: 0.25em;
+			color: $color2;
+			border-radius: 0.25em 0.25em 0 0;
+			h3 {margin:0;
+				font-size: 1.25em;}
 		}
-		.location {
-			
-			max-width: 300px;
-
-				#dropdownMenu2 {
-					background-color: white;
-					color: $color1;
-					margin-top: 0;
-					padding-right: 1em;
-					width: 100%;
-					font-size: 1.5em;
-				}
-
-				.explore{
-					background-color: $color1;
-					width: 100%;
-					text-align: center;
-					padding-top: 0.5em;
-					padding-bottom: 0.5em;
-					border-radius: 0.15em;
-					
-					img {
-						width: 40%;
-					}
-				}
+		.selectplace-dropdown{
+			background-color: $color2;
+			border-radius: 0  0.25em 0 0;
+			height: 4em;
+		}
+		.selectplace-button{
+			background-color: $color1;
+			padding: 0.5em;
+			border-radius: 0 0 0.25em 0.25em;
+			img{
+				height: 1.75em;
+				display: block;
+				margin: 0 auto;
+			}
+		}
+		.selestplace-selected{
+			display:none;
+			padding: 0 1.5em;
+			background-color: $color2;
+			color: $color1;
+			h3{
+				margin:0;
+				font-size: 1.25em;
+				border-top: $color1 solid 3px;
+				padding: 0.25em 0;
+			}
 		}
 	}
-	
-
-	
-
+	.dropdown-menu{
+		height: 50vh;
+		overflow-y: scroll;
+	}
+	.dropdown-header{
+		font-size: 1.5em;
+		line-height: 2em;
+	}
+	.dropdown-toggle{
+		position: relative;
+		&:after{
+			position: absolute;
+			right: 0%;
+			top:50%;
+			transform: translateY(-50%);
+			margin-right:1em;
+		}
+	}
+		
 }
 
 // Section 3
