--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -5,14 +5,19 @@ $font-main : 'Muli', sans-serif;
 // Colours
 $red : #FE5F55;
 $lightblue : #F7F7FF;
+$green : #289F8E;
 
 $darken : rgba(0,0,0,0.2);
 
 $color1: $red;
 $color2: $lightblue;
+$color3: $green;
 
 // Height
 $headerfooterheight : 10vh;
 
 // Buttons
 $button-size: 1.75em;
+
+// Radius
+$radius: 5px;
