finished navigation. started error-message for section 2. Changed drop-down list for section-2. Added current & selected classes for some objects.

--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -1,4 +1,10 @@
 // Base
+.wrapper{
+	min-height: 100vh;
+	width: 100%;
+	position: relative;
+	overflow: hidden !important ;
+}
 .header, .footer{
 	background-color: $color2;
 	height:$headerfooterheight;
@@ -19,19 +25,26 @@
 .location-title, .location-choice{
 	h1{
 		margin:0 1em 0 0;
+		font-weight:400;
 	}
 }
-
+.location-title{
+	color: $color1;
+}
+.location-choice{
+	color: $dropdown-header-color;
+}
 
 .back-btn { 
 	color: $color1;
 	box-sizing:border-box;
 	padding:1em;
+	cursor: pointer;
 
 	i{
 		font-size:$button-size;
 	}
-}	
+}
 .section{
 	min-height: 100vh;
 	min-width: 320px;
@@ -43,15 +56,16 @@
 	left:0;
 	overflow:hidden;
 }
-.section.slide-in{
-	left:-120%;
+section.slide-in{
+	left:120%;
+	transition: all ease 1s;
 }
-.current-section{
-	z-index: 20;
+section.current-section{
+	left:0;
 }
-// Section 0
+// Section 1
 
-.section-0{
+.section-1{
 	z-index: 30;
 	background-color: $color1;
 	position: relative;
@@ -83,6 +97,17 @@
 		}
 	}
 }
+// error messages
+
+.error-suburb{
+	display: none;
+	background-color: $color1;
+	margin: 0 0.5em;
+	padding: 0 0.75em;
+	border-radius: 5px;
+	color: lighten($color1,25%);
+	font-weight: 300;
+}
 
 // Section 2
 
@@ -113,14 +138,24 @@
 			color: $color2;
 			border-radius: 0.25em 0.25em 0 0;
 			h3 {margin:0;
-				font-size: 1.25em;}
+				font-size: 1.25em;
+				font-weight: 300;}
 		}
 		.selectplace-dropdown{
 			background-color: $color2;
 			border-radius: 0  0.25em 0 0;
-			height: 4em;
+			min-height: 6em;
+			h1{
+				font-size: 1.5em;
+				margin:0 1em;
+				padding: 0.25em 0;
+				border-bottom: $color1 solid 3px;
+				color: $dropdown-header-color;
+				font-weight:300;
+			}
 		}
 		.selectplace-button{
+			cursor: pointer;
 			background-color: $color1;
 			padding: 0.5em;
 			border-radius: 0 0 0.25em 0.25em;
@@ -130,26 +165,15 @@
 				margin: 0 auto;
 			}
 		}
-		.selestplace-selected{
-			display:none;
-			padding: 0 1.5em;
-			background-color: $color2;
-			color: $color1;
-			h3{
-				margin:0;
-				font-size: 1.25em;
-				border-top: $color1 solid 3px;
-				padding: 0.25em 0;
-			}
-		}
 	}
 	.dropdown-menu{
 		height: 50vh;
 		overflow-y: scroll;
 	}
 	.dropdown-header{
-		font-size: 1.5em;
-		line-height: 2em;
+		font-size: 1.25em;
+		color: $color1;
+		
 	}
 	.dropdown-toggle{
 		position: relative;
@@ -184,7 +208,7 @@
 			align-items:center;
 			justify-content:space-between;
 
-				
+			cursor: pointer;	
 			.choice-name {
 				margin-left:1em;
 				color:$color2;
@@ -204,7 +228,10 @@
 					color:$color2;
 				}
 			}
-
+		}
+		.choices.selected{
+			transition: all 0.5s ease;
+			background-color: lighten($color1,8%);
 		}
 	}
 }
