--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -232,6 +232,58 @@
 		flex:
 		1 0 20em;
 	}
+
+	#venue-modal{
+		position: absolute;
+		width:100vw;
+		height:100vh;
+		bottom: 0;
+		left: 0;
+		.modal-dialog{
+			position: absolute;
+			width:100vw;
+			height:100vh;
+			padding:0;
+			margin:0;
+			.modal-content{
+				position: fixed;
+				width:100vw;
+				bottom:$headerfooterheight;
+				border:none;
+				border-radius:0;
+				background-color:$color1;
+				div{
+					border:none;
+				}
+				.modal-header{
+					background-color:$color2;
+					border-radius:0;
+					button{
+						width:2em;
+						height:2em;
+						padding:0;
+						margin:0;
+						border:none;
+						background-color:transparent;
+						i{
+							font-size:2em;
+						}
+					}
+					.path i{
+						color:$color1;
+					}
+					.close i{
+						color:$color3;
+					}
+				}
+				.modal-body{
+					padding:0;
+					height:25vh;
+				}
+			}
+
+		}
+	}
 }
 
 @media only screen and (min-width: 40em) {
