changed colour scheme and worked on API

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -4,12 +4,14 @@ $font-main : 'Muli', sans-serif;
 
 // Colours
 $red : #FE5F55;
+$green : #97D8BC;
 $lightblue : #F7F7FF;
 
 $darken : rgba(0,0,0,0.2);
 
-$color1: $red;
+$color1: $green;
 $color2: $lightblue;
+$color3: $red;
 
 // Height
 $headerfooterheight : 10vh;
