--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -70,6 +70,7 @@ section.current-section{
 // Section 1
 
 .section-1{
+	display:none;
 	z-index: 30;
 	background-color: $color1;
 	position: relative;
